--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^7.22.0",
     "axios": "^1.7.7",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
