--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
 
-VITE_REACT_APP_URL="localhost:8000"
+VITE_REACT_APP_URL="http://125.125.10.100:9090"
+# VITE_REACT_APP_URL="http://localhost:8000"
 
 VITE_REACT_APP_NAME="Park Manager"
 
